--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <div class="box_image">
     <header id="header">
       <div class="header__inner">
         <h1 class="header__logo">
@@ -32,9 +33,9 @@
           <h2 class="main__visual-title">Eisuke.mi<br />Engineer/Creater</h2>
         </div>
         <div class="main__visual-img">
-          <img src="./img/night_urban.jpg" alt="男の画像">
         </div>
       </section>
     </main>
+    </div>
   </body>
 </html>
