--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   </head>
 
   <body>
-    <div class="box_image">
+    <div class="box__image">
+      <div class="box__image-filter">
     <header id="header">
       <div class="header__inner">
         <h1 class="header__logo">
@@ -36,6 +37,7 @@
         </div>
       </section>
     </main>
+    </div>
     </div>
   </body>
 </html>
