--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>Eisuke.mi</title>
-    <link
-      href="https://fonts.googleapis.com/earlyaccess/nicomoji.css"
-      rel="stylesheet"
-    />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Libre+Barcode+39&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -31,7 +30,8 @@
     <main id="main">
       <section class="main">
         <div class="main__visual">
-          <h2 class="main__visual-title">Eisuke.mi<br />Engineer/Creater</h2>
+          <h2 class="main__visual-title">E i s u k e .m i</h2>
+          <h2 class="main__visual-text">E i s u k e .m i</h2>
         </div>
         <div class="main__visual-img">
         </div>
