--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- メインページのデモ -->
     <div class="main-page" id="main-page">
       <div class="main-logo">
-        <img src="./img/logo.png" alt="Escqpe.mi Logo" />
+        <img class="main-logo-picture" src="./img/logo.png" alt="Escqpe.mi Logo" />
       </div>
     </div>
 
